# macos-dns-proxy

./: .gitignore  Cargo.toml  Makefile  README.md  com.local.macos-dns-proxy.plist
.github/workflows/: ci.yml
src/: handler.rs  lib.rs  main.rs  ptr.rs  resolver.rs  upstream.rs
tests/: integration.rs
