[package]
name = "macos-dns-proxy"
version = "0.1.0"
edition = "2024"
description = "A lightweight DNS forwarding proxy for macOS that exposes the system resolver to network clients"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
dns-lookup = "3"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[dev-dependencies]
rand = "0.9"
